--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .container-fluid {
-    background-image: url(../img/bGround.jpg);
+    background-image: url(../img/bGround-min.jpg);
     background-repeat: no-repeat;
     height: 100vh;
     display: flex;
